天安門ブロックを追加

--- a/app/views/_layout.rhtml
+++ b/app/views/_layout.rhtml
@@ -3,11 +3,14 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title><%=h @html_title || '画像保管庫@狼' %></title>
-    <%= include_for "jquery13.js" -%>
+    <%- include_for "jquery13.js" -%>
     <%= stylesheet_link_tag 'application' %>
     <%= yield :header %>
   </head>
   <body>
+<!-- 六四天安門事件 -->
+<!-- Tiananmen Massacre http://en.wikipedia.org/wiki/Tiananmen_Square_protests_of_1989  -->
+<!-- since 2010/04/17 02:08:01 -->
 <table id="headtable" cellpadding="0" cellspacing="0">
 <tr>
   <td class="logo-image">
